#3437 List html/css cleanup; article lists module

--- a/_includes/article-title-list-2.html
+++ b/_includes/article-title-list-2.html
@@ -1,36 +1,22 @@
-<ul class="article-titles">
+
+  <ul class="article--list">
     <li class="first-item">
-        <article>
-            <a href="leder-n.html" class="">Husarbeid og barnepass er ikke kulturutveksling <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">30. juni</time>
-                </span></a>
-        </article>
+      <a href="leder-n.html" class="">Husarbeid og barnepass er ikke kulturutveksling <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">30. juni</time></a>
     </li>
+
     <li>
-        <article>
-            <a href="leder-n.html" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle) <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">28. juni</time>
-                </span>
-            </a>
-        </article>
+      <a href="leder-n.html" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle) <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">28. juni</time></a>
     </li>
-     <li>
-        <article>
-            <a href="leder-n.html" class="">Morgendagens biler trenger bare luft <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">26. juni</time>
-                </span>
-            </a>
-        </article>
+
+    <li>
+      <a href="leder-n.html" class="">Morgendagens biler trenger bare luft <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">26. juni</time></a>
     </li>
-     <li>
-        <article>
-            <a href="leder-n.html" class="">Hvor mange svensker trengs for å drive en kafé? <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">24. juni</time>
-                </span>
-            </a>
-        </article>
+
+    <li>
+      <a href="leder-n.html" class="">Hvor mange svensker trengs for å drive en kafé? <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">24. juni</time></a>
     </li>
-     <li>
-        <article>
-            <a href="leder-n.html" class="">Den velsignede innvandringen <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">22. juni</time>
-                </span>
-            </a>
-        </article>
+
+    <li>
+      <a href="leder-n.html" class="">Den velsignede innvandringen <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">22. juni</time></a>
     </li>
-</ul>
+  </ul>
