--- a/_includes/article-title-list.html
+++ b/_includes/article-title-list.html
@@ -1,31 +1,22 @@
-<ul class="article-titles titles-bbc">
+
+  <ul class="article--list article--list-icon">
     <li class="first-item">
-        <article>
-            <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling</a>
-        </article>
+      <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling</a>
     </li>
+
     <li>
-        <article>
-            <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar
-            </a>
-        </article>
+      <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar</a>
     </li>
-     <li>
-        <article>
-            <a href="#" class="">Morgendagens biler trenger bare luft
-            </a>
-        </article>
+
+    <li>
+      <a href="#" class="">Morgendagens biler trenger bare luft</a>
     </li>
-     <li>
-        <article>
-            <a href="#" class="">Hvor mange svensker trengs for å drive en kafé?
-            </a>
-        </article>
+
+    <li>
+      <a href="#" class="">Hvor mange svensker trengs for å drive en kafé?</a>
     </li>
-     <li>
-        <article>
-            <a href="#" class="">Den velsignede innvandringen
-            </a>
-        </article>
+
+    <li>
+      <a href="#" class="">Den velsignede innvandringen</a>
     </li>
-</ul>
+  </ul>
