--- a/_sass/partials/global/_variables.scss
+++ b/_sass/partials/global/_variables.scss
@@ -3,10 +3,15 @@
 
 // Font families
 $font-family-sans: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;;
-
+$font-family-bold: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
 
 // Colors
 $color-top-border: #DDD;
+
+
+// Lists variables
+$article-list-border-color: #E5E5E5;
+$article-list-link-color:   #333333;
 
 
 // Global Footer variables
