--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %} {{ page.title }} | {% endif %} NewsFront</title>
-
-  <link rel="stylesheet" href="css/style.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
   <div class="top-wrapper">
     {% include ad-mobile.html %}
