--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,22 +2,20 @@
 layout: default
 ---
 
-<div class="page-header">
-  <h1>{{ page.title }}</h1>
-</div>
+  <div class="page-header">
+    <h1>{{ page.title }}</h1>
+  </div>
 
-{{ content }}
+  {{ content }}
 
-        <section class="section alt">
-            <div class="container">
-                <div class="hero-unit pull-center">
-                    <h1>Har du spørsmål?</h1>
-                    <p>
-                      want to work with us to move your bussines to the next level? Well, dont be afraid
-                    </p>
-                    <a href="kontakt.html" class="btn btn-primary btn-large">
-                      kontakt oss
-              </a>
-                </div>
-            </div>
-        </section>
+  <section class="section alt">
+    <div class="container">
+      <div class="hero-unit pull-center">
+        <h1>Har du spørsmål?</h1>
+
+        <p>want to work with us to move your bussines to the next level? Well,
+        dont be afraid</p><a class="btn btn-primary btn-large" href=
+        "kontakt.html">kontakt oss</a>
+      </div>
+    </div>
+  </section>
