--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -1,7 +1,3 @@
-/* On/off */
-
-
-
 /* General */
 .image-replace {
   text-indent: 100%;
@@ -43,11 +39,6 @@
   padding-top: 12px;
 }
 
-.section-heading {
-  text-transform: uppercase;
-  // color: #333;
-}
-
 .col-heading {
   text-transform: uppercase;
 }
@@ -56,7 +47,11 @@
   margin: 30px 0;
 }
 
-.section-heading + span {
+.section--header .title {
+  text-transform: uppercase;
+}
+
+.section--header span {
   margin: -10px 0 20px 0;
   color: #444;
   font-family: "Times New Roman", serif;
@@ -222,34 +217,7 @@ li .published {
   margin-top: -15px;
 }
 
-// Article title list
-.article-titles {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
-  li {
-    box-sizing: border-box;
-    border-bottom: 1px solid #E5E5E5;
-    font-family: "Arial Black",Arial,sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    list-style-type: none;
-    margin: 0 auto;
-    position: relative;
-    overflow: auto;
-    a {
-      display: block;
-      padding: 13px 0 10px;
-      color: #333;
-    }
-    a:hover {
-      color: #000;
-    }
-  }
-  li:nth-child(1) {
-    border-top: 1px solid #E5E5E5;
-  }
-}
+
 
 .titles-bbc {
   li {
