--- a/css/style.css
+++ b/css/style.css
@@ -5120,6 +5120,38 @@ header + .ads {
   padding-right: 0;
 }
 
+.article--list {
+  border-top: 1px solid #e5e5e5;
+}
+.article--list li {
+  -moz-box-sizing: "border-box";
+  -webkit-box-sizing: "border-box";
+  box-sizing: "border-box";
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+  border-bottom: 1px solid #e5e5e5;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-size: 14px;
+  font-weight: 900;
+}
+.article--list a {
+  color: #333333;
+  display: block;
+  padding: 13px 0 11px;
+}
+.article--list a:hover {
+  color: #030303;
+}
+
+.article--list-icon li {
+  background: transparent url('../img/icon-arrow-right.png?1373972578') right 49% no-repeat;
+  padding-right: 19px;
+}
+.article--list-icon a {
+  color: #030303;
+}
+
 .footer {
   padding-top: 20px;
   background-color: #ed232a;
@@ -5295,7 +5327,6 @@ header + .ads {
   text-transform: uppercase;
 }
 
-/* On/off */
 /* General */
 .image-replace {
   text-indent: 100%;
@@ -5334,10 +5365,6 @@ header + .ads {
   padding-top: 12px;
 }
 
-.section-heading {
-  text-transform: uppercase;
-}
-
 .col-heading {
   text-transform: uppercase;
 }
@@ -5346,7 +5373,11 @@ header + .ads {
   margin: 30px 0;
 }
 
-.section-heading + span {
+.section--header .title {
+  text-transform: uppercase;
+}
+
+.section--header span {
   margin: -10px 0 20px 0;
   color: #444;
   font-family: "Times New Roman", serif;
@@ -5484,34 +5515,6 @@ li .published {
 
 .stick-to-top {
   margin-top: -15px;
-}
-
-.article-titles {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
-}
-.article-titles li {
-  box-sizing: border-box;
-  border-bottom: 1px solid #E5E5E5;
-  font-family: "Arial Black",Arial,sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  list-style-type: none;
-  margin: 0 auto;
-  position: relative;
-  overflow: auto;
-}
-.article-titles li a {
-  display: block;
-  padding: 13px 0 10px;
-  color: #333;
-}
-.article-titles li a:hover {
-  color: #000;
-}
-.article-titles li:nth-child(1) {
-  border-top: 1px solid #E5E5E5;
 }
 
 .titles-bbc li {
