Updated solr client and endpoint url

--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -21,7 +21,7 @@
       $('#nf-menu-main').menuToggle();
       $('#nf-menu-main-blue').menuToggle();
 
-      solrSetup();
+      nfSolr.setup();
     });
   </script>
 
