#3437 Articles small teasers grid (wip)
- Replace small teaser grid with Singularity generated grid
- Add top menu links

--- a/_includes/article-grid-small.html
+++ b/_includes/article-grid-small.html
@@ -1,43 +1,51 @@
 
-<article class="grid-teaser row">
-    <div class="small-5 columns">
-        <a href="story-n.html">
-            <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
-        </a>
-    </div>
-    <div class="small-7 columns">
-        <a href="story-n.html">
-            <h1 class="title">- Låtskrivingen har vært terapi for meg</h1>
-            <p class="lead">Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
-        </a>
-    </div>                     
+<article class="article--teaser-small">
+  <a class="grid-5" href="story-n.html">
+    <img alt="" src="/img/assets/placeholder--teaser-blondie.jpg">
+  </a>
+
+  <div class="grid-7 omega">
+    <a href="#">
+      <header>
+        <h1 class="title">Låtskrivingen har vært terapi for meg</h1>
+      </header>
+      <p>Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
+    </a>
+  </div>
 </article>
+
 <hr>
-<article class="grid-teaser row">
-    <div class="small-5 columns">
-        <a href="story-n.html">
-            <img alt="" src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
-        </a>
-    </div>
-    <div class="small-7 columns">
-        <a href="story-n.html">
-            <h1 class="title">- Aldri om jeg vil tilbake dit</h1>
-            <p class="lead">Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
-        </a>
-    </div>                     
+
+<article class="article--teaser-small">
+  <a class="grid-5" href="story-n.html">
+    <img alt="" src="/img/assets/placeholder--teaser-blondie.jpg">
+  </a>
+
+  <div class="grid-7 omega">
+    <a href="#">
+      <header>
+        <h1 class="title">Aldri om jeg vil tilbake dit</h1>
+      </header>
+      <p>Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
+    </a>
+  </div>
 </article>
+
 <hr>
-<article class="grid-teaser row">
-    <div class="small-5 columns">
-        <a href="story-n.html">
-            <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
-        </a>
-    </div>
-    <div class="small-7 columns">
-        <a href="story-n.html">
-            <h1 class="title">- Låtskrivingen har vært terapi for meg</h1>
-            <p class="lead">Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
-        </a>
-    </div>                     
+
+<article class="article--teaser-small">
+  <a class="grid-5" href="story-n.html">
+    <img alt="" src="/img/assets/placeholder--teaser-blondie.jpg">
+  </a>
+
+  <div class="grid-7 omega">
+    <a href="#">
+      <header>
+        <h1 class="title">Låtskrivingen har vært terapi for meg</h1>
+      </header>
+      <p>Astrid vokste opp med aggrassiv hund. Nå snakker hun åpent ut.</p>
+    </a>
+  </div>
 </article>
+
 <hr>
