--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -3,7 +3,7 @@
   <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">Meny</a></section>
   <section class="nf-mainbar-keep">
     <ul>
-      <li class=""><a href="#" class="">Abonnér</a></li>
+      <li class=""><a href="static.html" class="">Abonnér</a></li>
       <li class="divider"></li>
       <li class=""><a href="search.html" class="">Søk</a></li>
       <li class="divider"></li>
@@ -11,9 +11,9 @@
   </section>
   <section class="nf-mainbar-section">
     <ul>
-      <li><a href="#">Meninger</a></li>
+      <li><a href="section-ledere.html">Meninger</a></li>
       <li class="divider"></li>
-      <li><a href="#">Kultur</a></li>
+      <li><a href="section-mag.html">Kultur</a></li>
       <li class="divider"></li>
     </ul>
   </section>
