--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -1,18 +1,14 @@
-/* General */
+// General
 .image-replace {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.hr-thick {
-  border: 2px solid #000;
-}
-
 .title {
   color: #000;
   display: block;
-  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
+  font-family: $font-family-sans;
   text-decoration: none !important;
   word-wrap: break-word;
 }
@@ -34,7 +30,7 @@
   }
 }
 
-// dummy code for icon
+// Dummy code for icon
 .icon-search {
   padding-top: 12px;
 }
@@ -66,7 +62,7 @@
 }
 
 li .published {
-  font-family: "Helvetica Neue", arial;
+  font-family: $font-family-sans;
   font-weight: normal;
   color: #888;
   display: inline-block;
@@ -77,23 +73,10 @@ li .published {
   @include border-radius(50%);
 }
 
-
-// .grid-teaser {
-//   border-bottom: 5px solid #000000;
-//   margin-bottom: 30px;
-// }
-
-
-/* Top bar */
+// Top bar
 .top-bar {
   margin-bottom: 0;
 }
-/*
-.top-bar-section li a:not(.button) {
-  background: white;
-  line-height: 45px;
-  padding: 0 15px;
-}*/
 
 .section-header {
   background: #C80000;
@@ -102,18 +85,17 @@ li .published {
   padding-bottom: 10px;
 
   h1 {
-   font-size: 18px;
-   font-weight: 300;
-   margin: 0;
-   text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 300;
+    margin: 0;
+    text-transform: uppercase;
   }
   a {
-   color: white;
+    color: white;
   }
 }
 
-/* TL menu */
-
+// TL menu
 .tl-page {
   background: #F4FAFC;
   margin-top: -10px;
@@ -140,7 +122,7 @@ li .published {
   text-align: center;
 }
 
-.top-menu li{
+.top-menu li {
   display: inline-block;
   margin-right: 10px;
   list-style: none;
@@ -179,8 +161,7 @@ li .published {
   margin: 0 0 -5px 0;
 }
 
-/* News section */
-
+// News section
 .overlay h1, .overlay p {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
   padding: 15px;
@@ -195,7 +176,7 @@ li .published {
     color: #000;
   }
   p, h1 {
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.1)
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.1);
   }
 }
 
@@ -205,20 +186,7 @@ li .published {
   margin-top: -15px;
 }
 
-
-
-.titles-bbc {
-  li {
-    background: url(../img/icon-arrow-right.png) right 49% no-repeat;
-    padding: 0 18px 0 0;
-  }
-  a {
-    color: #000;
-  }
-}
-
-/* Elements */
-
+// Elements
 .panel ul {
   padding-left: 20px;
   font-size: 0.8em;
@@ -236,9 +204,7 @@ li .published {
   margin-top: 40px;
 }
 
-
-/* Site footer */
-
+// Site footer
 .site-footer {
   background: #eee;
   border-top: 1px dotted #999;
