--- a/_sass/partials/module/partials/_series.scss
+++ b/_sass/partials/module/partials/_series.scss
@@ -1,12 +1,12 @@
 // Series
-.section--series {}
+.series {}
 
 .series--promo {
   @include breakpoint($breakpoint-medium) {
     @include float-span(4);
     padding-bottom: 1.25em;
 
-    &:nth-of-type(3n) { // Replace this selector with a class.
+    &:nth-child(3n) {
       @include float-span(4, 'omega');
     }
   }
