--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ img, video {
   height: auto;
 }
 
-.l-row:after:after {
+.l-row:after:after, .article--teaser-small:after:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.l-row:after {
+.l-row:after, .article--teaser-small:after {
   content: "";
   display: table;
   clear: both;
@@ -5040,6 +5040,172 @@ table tfoot tr td {
   text-align: left;
 }
 
+@media (min-width: 768px) {
+  .grid-1 {
+    width: 5.52334%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+
+  .grid-2 {
+    width: 14.11212%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-2:nth-child(6n) {
+    width: 14.11212%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-3 {
+    width: 22.70091%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-3:nth-child(4n) {
+    width: 22.70091%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-4 {
+    width: 31.2897%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-4:nth-child(3n) {
+    width: 31.2897%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-5 {
+    width: 39.87849%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-5:nth-child(2.4n) {
+    width: 39.87849%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-6 {
+    width: 48.46727%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-6:nth-child(2n) {
+    width: 48.46727%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-7 {
+    width: 57.05606%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-7:nth-child(1.71429n) {
+    width: 57.05606%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-8 {
+    width: 65.64485%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-8:nth-child(1.5n) {
+    width: 65.64485%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-9 {
+    width: 74.23364%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-9:nth-child(1.33333n) {
+    width: 74.23364%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-10 {
+    width: 82.82242%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-10:nth-child(1.2n) {
+    width: 82.82242%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-11 {
+    width: 91.41121%;
+    clear: right;
+    float: left;
+    margin-left: 0%;
+    margin-right: 3.06545%;
+  }
+  .grid-11:nth-child(1.09091n) {
+    width: 91.41121%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+
+  .grid-12 {
+    width: 100%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+  .grid-12:nth-child(1n) {
+    width: 100%;
+    clear: right;
+    float: right;
+    margin-right: 0%;
+  }
+}
+.omega {
+  margin-right: 0;
+}
+
 .inline-block-list {
   margin: 0;
   padding: 0;
@@ -5150,6 +5316,18 @@ header + .ads {
 }
 .article--list-icon a {
   color: #030303;
+}
+
+.article--teaser-small h1 {
+  font-size: 20px;
+  line-height: 22px;
+  margin: -3px 0 5px 0;
+}
+.article--teaser-small p {
+  font-size: 14px;
+  line-height: 16px;
+  color: #999;
+  margin-bottom: 0;
 }
 
 .footer {
@@ -5336,7 +5514,7 @@ header + .ads {
     margin-right: 3.06545%;
     padding-bottom: 1.25em;
   }
-  .series--promo:nth-of-type(3n) {
+  .series--promo:nth-child(3n) {
     width: 31.2897%;
     clear: right;
     float: right;
@@ -5383,21 +5561,16 @@ header + .ads {
   }
 }
 
-/* General */
 .image-replace {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.hr-thick {
-  border: 2px solid #000;
-}
-
 .title {
   color: #000;
   display: block;
-  font-family: 'Helvetica Neue',Arial,freesans,sans-serif;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   text-decoration: none !important;
   word-wrap: break-word;
 }
@@ -5448,7 +5621,7 @@ header + .ads {
 }
 
 li .published {
-  font-family: "Helvetica Neue", arial;
+  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #888;
   display: inline-block;
@@ -5463,17 +5636,10 @@ li .published {
   border-radius: 50%;
 }
 
-/* Top bar */
 .top-bar {
   margin-bottom: 0;
 }
 
-/*
-.top-bar-section li a:not(.button) {
-  background: white;
-  line-height: 45px;
-  padding: 0 15px;
-}*/
 .section-header {
   background: #C80000;
   margin-bottom: 15px;
@@ -5490,7 +5656,6 @@ li .published {
   color: white;
 }
 
-/* TL menu */
 .tl-page {
   background: #F4FAFC;
   margin-top: -10px;
@@ -5556,7 +5721,6 @@ li .published {
   margin: 0 0 -5px 0;
 }
 
-/* News section */
 .overlay h1, .overlay p {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
   padding: 15px;
@@ -5577,15 +5741,6 @@ li .published {
   margin-top: -15px;
 }
 
-.titles-bbc li {
-  background: url(../img/icon-arrow-right.png) right 49% no-repeat;
-  padding: 0 18px 0 0;
-}
-.titles-bbc a {
-  color: #000;
-}
-
-/* Elements */
 .panel ul {
   padding-left: 20px;
   font-size: 0.8em;
@@ -5603,7 +5758,6 @@ li .published {
   margin-top: 40px;
 }
 
-/* Site footer */
 .site-footer {
   background: #eee;
   border-top: 1px dotted #999;
@@ -6220,24 +6374,6 @@ abbr.published:before {
 }
 .grid-style-2 a {
   color: #222;
-}
-
-.article-grid-small {
-  margin: 30px 0;
-}
-.article-grid-small article {
-  overflow: auto;
-}
-.article-grid-small h1 {
-  font-size: 20px;
-  line-height: 22px;
-  margin: -3px 0 5px 0;
-}
-.article-grid-small p {
-  font-size: 14px;
-  line-height: 16px;
-  color: #999;
-  margin-bottom: 0;
 }
 
 .most-popular {
