Move html files into folders, and hchange links accordingly

--- a/_includes/article-grid.html
+++ b/_includes/article-grid.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="large-4 columns">
         <article class="grid-teaser">
-            <a href="story-n.html">
+            <a href="/story/">
             <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
             <header>
                 <h1 class="title"><span class="label">Betalt</span>  Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
@@ -15,7 +15,7 @@
 
     <div class="large-4 columns">
             <article class="">
-                <a href="story-n.html">
+                <a href="/story/">
                 <img src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title">- Jeg må innrømme at Sammer var litt for tysk for meg</h1>
@@ -28,7 +28,7 @@
     </div>
     <div class="large-4 columns">
             <article class="">
-                <a href="story-n.html">
+                <a href="/story/">
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title">- Det har blitt en del forespørsler om date, middag, kino og alt mulig.</h1>
@@ -41,7 +41,7 @@
     </div>
     <div class="large-4 columns">
             <article class="">
-                <a href="story-n.html">
+                <a href="/story/">
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title">Bruk smertepillene riktig</h1>
@@ -54,7 +54,7 @@
     </div>
     <div class="large-4 columns">
             <article class="">
-                <a href="story-n.html">
+                <a href="/story/">
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268775/26877583/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
@@ -67,7 +67,7 @@
     </div>
     <div class="large-4 columns">
         <article class="">
-            <a href="story-n.html">
+            <a href="/story/">
             <header>
                 <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling når det er påtvunget, sier eliten</h1>
                 <p class="lead"><span class="radius secondary label">Samfunn</span> Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
