--- a/_includes/article-title-list-2.html
+++ b/_includes/article-title-list-2.html
@@ -1,22 +1,22 @@
 
   <ul class="article--list">
     <li class="first-item">
-      <a href="leder-n.html" class="">Husarbeid og barnepass er ikke kulturutveksling <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">30. juni</time></a>
+      <a href="/meninger/leder/" class="">Husarbeid og barnepass er ikke kulturutveksling <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">30. juni</time></a>
     </li>
 
     <li>
-      <a href="leder-n.html" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle) <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">28. juni</time></a>
+      <a href="/meninger/leder/" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle) <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">28. juni</time></a>
     </li>
 
     <li>
-      <a href="leder-n.html" class="">Morgendagens biler trenger bare luft <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">26. juni</time></a>
+      <a href="/meninger/leder/" class="">Morgendagens biler trenger bare luft <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">26. juni</time></a>
     </li>
 
     <li>
-      <a href="leder-n.html" class="">Hvor mange svensker trengs for å drive en kafé? <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">24. juni</time></a>
+      <a href="/meninger/leder/" class="">Hvor mange svensker trengs for å drive en kafé? <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">24. juni</time></a>
     </li>
 
     <li>
-      <a href="leder-n.html" class="">Den velsignede innvandringen <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">22. juni</time></a>
+      <a href="/meninger/leder/" class="">Den velsignede innvandringen <time class="published" title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate datetime="2013-04-26T">22. juni</time></a>
     </li>
   </ul>
