--- a/_includes/hero-section-footer.html
+++ b/_includes/hero-section-footer.html
@@ -10,7 +10,7 @@
           <h1 class="title"><a href="story-n.html">Verdensbefolkning øker dobbelt så fort som vi trodde</a></h1>
         </header>
 
-        <p><a href="story-n.html">Dette endrer alt, sier forsker</a></p>
+        <p><a href="/story/">Dette endrer alt, sier forsker</a></p>
 
         <footer>
           <a href="#" class="btn-simple light">Les mer</a>
