--- a/_includes/hero-section-top.html
+++ b/_includes/hero-section-top.html
@@ -9,10 +9,10 @@
                         </h2>
                         <article class="article-portrait">
                             <h1 class="title">
-                                <a href="story-n.html">Verdensbefolkning øker dobbelt så fort som vi trodde</a>
+                                <a href="/story/">Verdensbefolkning øker dobbelt så fort som vi trodde</a>
                             </h1>
                             <p class="lead">
-                                <a href="story-n.html">Dette endrer alt, sier forsker</a>
+                                <a href="/story/">Dette endrer alt, sier forsker</a>
                                 
                             </p>
                             <a href="#" class="btn-simple light">Les mer</a>
