--- a/_includes/menu-main-blue.html
+++ b/_includes/menu-main-blue.html
@@ -1,5 +1,5 @@
 <nav id="nf-menu-main-blue" class="nf-mainbar nf-blue nf-medium">
-  <section class="nf-brand"><a href="#">Newsblu</a></section>
+  <section class="nf-brand"><a href="/">Newsblu</a></section>
   <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
   <section class="nf-mainbar-section">
     <ul>
