--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,19 +1,19 @@
 <nav id="nf-menu-top" class="nf-mainbar nf-white nf-small">
-  <section class="nf-brand"><a href="#">Newsfront</a></section>
+  <section class="nf-brand"><a href="/">Newsfront</a></section>
   <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">Meny</a></section>
   <section class="nf-mainbar-keep">
     <ul>
-      <li class=""><a href="static.html" class="">Abonnér</a></li>
+      <li class=""><a href="/abonner/" class="">Abonnér</a></li>
       <li class="divider"></li>
-      <li class=""><a href="search.html" class="">Søk</a></li>
+      <li class=""><a href="/s/" class="">Søk</a></li>
       <li class="divider"></li>
     </ul>
   </section>
   <section class="nf-mainbar-section">
     <ul>
-      <li><a href="section-ledere.html">Meninger</a></li>
+      <li><a href="/meninger/">Meninger</a></li>
       <li class="divider"></li>
-      <li><a href="section-mag.html">Kultur</a></li>
+      <li><a href="/kultur/">Kultur</a></li>
       <li class="divider"></li>
     </ul>
   </section>
