--- a/_includes/menu-main.html
+++ b/_includes/menu-main.html
@@ -1,5 +1,5 @@
 <nav id="nf-menu-main" class="nf-mainbar nf-red nf-large">
-  <section class="nf-brand"><a href="#"></a></section>
+  <section class="nf-brand"><a href="/"></a></section>
   <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
   <section class="nf-mainbar-section">
     <ul>
