--- a/_includes/series-section.html
+++ b/_includes/series-section.html
@@ -7,7 +7,7 @@
     <div class="l-row">
       <article class="series--promo">
         <header>
-          <a href="/pluss/spesial/foreldreskolen">
+          <a href="#">
             <img alt="" class="image-round" src="/img/assets/placeholder--square-photo.jpg">
             <h1 class="title">Foreldreskolen</h1>
           </a>
@@ -25,7 +25,7 @@
 
       <article class="series--promo">
         <header>
-          <a href="/pluss/spesial/foreldreskolen">
+          <a href="#">
             <img alt="" class="image-round" src="/img/assets/placeholder--square-photo.jpg">
             <h1 class="title">Pensjonsskolen</h1>
           </a>
@@ -43,7 +43,7 @@
 
       <article class="series--promo">
         <header>
-          <a href="/pluss/spesial/foreldreskolen">
+          <a href="#">
             <img alt="" class="image-round" src="/img/assets/placeholder--square-photo.jpg">
             <h1 class="title">Bokettersynet</h1>
           </a>
