--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="top-wrapper">
-    {% include ad-mobile.html %}
+    <!-- include ad-mobile.html -->
   </div>
 
   <header class="header" id="header">
