--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -36,3 +36,4 @@ $legacy-support-for-mozilla: false;
 @import 'modules/article-grid';
 @import 'modules/menu';
 @import 'modules/searchbox-nf';
+@import 'modules/ad-holder';
