Fixed js files path

--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -1,19 +1,18 @@
 
-  <script src="js/vendor/jquery.js"></script>
+  <script src="/js/vendor/jquery.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/fitvids/1.0.1/jquery.fitvids.min.js"></script>
-  <script src="js/foundation.min.js"></script>
-  <script src="js/vendor/custom.modernizr.js"></script>
-  <script src="js/vendor/holder.js"></script>
-  <script src="js/vendor/classie.js"></script>
-  <script src="js/vendor/uisearch.js"></script>
+  <script src="/js/foundation.min.js"></script>
+  <script src="/js/vendor/custom.modernizr.js"></script>
+  <script src="/js/vendor/holder.js"></script>
+  <script src="/js/vendor/classie.js"></script>
 
-  <script src="js/vendor/enquire.min.js"></script>
-  <script src="js/vendor/waypoints.min.js"></script>
+  <script src="/js/vendor/enquire.min.js"></script>
+  <script src="/js/vendor/waypoints.min.js"></script>
 
-  <script src="js/nf-dropdownmenu.js"></script>
-  <script src="js/nf-loader.js"></script>
-  <script src="js/nf-searchbox.js"></script>
-  <script src="js/nf-solr-search.js"></script>
+  <script src="/js/nf-dropdownmenu.js"></script>
+  <script src="/js/nf-loader.js"></script>
+  <script src="/js/nf-searchbox.js"></script>
+  <script src="/js/nf-solr-search.js"></script>
 
   <script>
     $(document).ready(function(){
