--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-  <div class="top-wrapper">
-    <!-- include ad-mobile.html -->
-  </div>
+  <div class="nf-mobile-ad"></div>
 
   <header class="header" id="header">
     {% include menu-top.html %}
