Removed old searchbox css

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -30,10 +30,9 @@ $legacy-support-for-mozilla: false;
 @import 'modules/misc';
 @import 'modules/article';
 @import 'modules/search';
-@import 'modules/search-box';
 @import 'modules/responsive';
 @import 'modules/buttons';
 @import 'modules/article-grid';
-@import 'modules/menu';
-@import 'modules/searchbox-nf';
+@import 'modules/menus';
+@import 'modules/searchbox';
 @import 'modules/ad-holder';
